cambio de lugar diapos firmas y combinacion de bandas

--- a/Nivel1-A/Documentos/Videos/clase2.tex
+++ b/Nivel1-A/Documentos/Videos/clase2.tex
@@ -60,6 +60,12 @@
 \end{frame}
 
 %--- Next Frame ---%
+\begin {frame}
+\begin{block}{Hablamos de radiancia}
+      ¿qué es?
+               \end{block}
+\end{frame}
+%--- Next Frame ---%
 
 \begin{frame}{}
   \begin{figure}
@@ -69,12 +75,7 @@
     \label{}
   \end{figure}
 \end{frame}
-%--- Next Frame ---%
-\begin {frame}
-\begin{block}{Hablamos de radiancia}
-      ¿qué es?
-               \end{block}
-\end{frame}
+
 %--- Next Frame ---%
 
 \begin{frame}{}
@@ -318,16 +319,8 @@
 
     \end{block}
 \end{frame}
-%--- Next Frame ---%
 
-\begin{frame}{}
-  \begin{figure}
-    \centering
-    \includegraphics[width=0.5\textwidth]{fig:color.jpg}
-    \caption{Elementos de interpretación visual - Color.}
-    \label{}
-  \end{figure}
-\end{frame}
+
 %--- Next Frame ---%
 
 \begin{frame}{}
@@ -340,15 +333,7 @@
 \end{frame}
 
 %--- Next Frame ---%
-\begin{frame}{}
-  \begin{figure}
-    \centering
-    \includegraphics[width=0.5\textwidth]{fig:color.jpg}
-    \caption{Interpretación visual - color real.}
-    \label{}
-  \end{figure}
-\end{frame}
-%--- Next Frame ---%
+
 
 \subsection{Interpretación visual}
 
@@ -363,6 +348,35 @@
 
 %--- Next Frame ---%
 
+\begin{frame}{}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{fig:esreal.png}
+    \caption{Interpretación visual - color real. }
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.5\textwidth]{fig:color.jpg}
+    \caption{Interpretación visual - color real.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+\begin{frame}{}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{fig:esir.png}
+    \caption{Interpretación visual - infrarrojo color.}
+    \label{}
+  \end{figure}
+\end{frame}
+
+%--- Next Frame ---%
 
 \begin{frame}{}
   \begin{figure}
@@ -374,6 +388,8 @@
 \end{frame}
 %--- Next Frame ---%
 
+
+
 \begin{frame}{}
   \begin{figure}
     \centering
@@ -382,6 +398,7 @@
     \label{}
   \end{figure}
 \end{frame}
+
 %--- Next Frame ---%
 
 \begin{frame}{}
@@ -389,18 +406,6 @@
     \centering
     \includegraphics[width=0.6\textwidth]{fig:imcomp.jpeg}
     \caption{Interpretación visual - falso color compuesto.}
-    \label{}
-  \end{figure}
-\end{frame}
-
-
-%--- Next Frame ---%
-
-\begin{frame}{}
-  \begin{figure}
-    \centering
-    \includegraphics[width=0.8\textwidth]{fig:esir.png}
-    \caption{Interpretación visual - infrarrojo color.}
     \label{}
   \end{figure}
 \end{frame}
