--- a/Nivel1-A/Documentos/Videos/clase2.tex
+++ b/Nivel1-A/Documentos/Videos/clase2.tex
@@ -161,7 +161,12 @@
          \end{block}
 \end{frame}
 
-
+%--- Next Frame ---%
+\begin {frame}
+\begin{block}{Firma espectral}
+      Concepto.
+               \end{block}
+\end{frame}
 %--- Next Frame ---%
 
 \subsection{Firmas espectrales}
