--- a/Nivel1-A/Documentos/Videos/clase3.tex
+++ b/Nivel1-A/Documentos/Videos/clase3.tex
@@ -1,6 +1,17 @@
 \section{Formación de imágenes satelitales}
 \subsection{Partes de una imagen}
+%--- Next Frame ---%
 
+\begin{frame}{}
+\begin{block}{Píxel}
+  Un píxel es el mínimo elemento de una imagen. 
+\end{block}\pause
+\begin{block}{Banda}
+  Una imagen digital es un agrupamiento de píxeles en dos dimensiones. 
+\end{block}
+\end{frame}
+
+%--- Next Frame ---%
 \begin{frame}{}
   \begin{figure}
     \centering
@@ -10,17 +21,7 @@
   \end{figure}
 \end{frame}
 % modificar el video, no me cierra nada, es bastante confuso, o mejorar o cambiar.
-%--- Next Frame ---%
 
-\begin{frame}{}
-\begin{block}{Píxel}
-  Un píxel es el mínimo elemento de una imagen. Cada píxel tiene un único valor numérico.
-\end{block}\pause
-\begin{block}{Banda}
-  Una banda es un agrupamiento de píxeles en dos dimensiones. Una banda puede estar asociada a una longitud de onda específica o a una operación matemática.
-\end{block}
-\end{frame}
-%--- Next Frame ---%
 
 
 \begin{frame}{}
@@ -108,7 +109,7 @@
 \begin{frame}{}
   \begin{block}{1 bits}
    \begin{equation}
-            2^2 = 0-1
+            2^1 = 0-1
         \end{equation}
   \end{block}
 \end{frame}
@@ -128,8 +129,8 @@
 
 
 \begin{frame}{}
-    \begin{block}{Definición}
-        En la capacidad de distinguir cambios en la radiancia que proviene de un píxel y como ésta se cuantifica.
+    \begin{block}{Resolución espectral}
+        Es el número de y tamaño de intervalos de un rango de lon
     \end{block}
 \end{frame}
 %--- Next Frame ---%
